<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="it.jaschke.alexandria.AddBook">

    <LinearLayout
        android:id="@+id/books_available"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="false">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|top"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/fullBookTitle"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_margin="@dimen/dimen_10"
                    android:paddingRight="@dimen/dimen_20"
                    android:textIsSelectable="true"
                    android:textSize="@dimen/large_fontsize"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/fullBookCover"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/fullBookTitle"
                    android:layout_alignStart="@+id/fullBookTitle"
                    android:layout_below="@+id/fullBookTitle"
                    android:layout_marginTop="15dp"
                    android:contentDescription="@string/book_cover" />

                <TextView
                    android:id="@+id/fullBookSubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/fullBookCover"
                    android:layout_marginLeft="@dimen/dimen_20"
                    android:layout_marginRight="10dp"
                    android:layout_toEndOf="@+id/fullBookCover"
                    android:layout_toRightOf="@+id/fullBookCover"
                    android:ellipsize="end"
                    android:maxLines="5"
                    android:textSize="18sp" />


                <TextView
                    android:id="@+id/fullBookDesc"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/fullBookCover"
                    android:layout_margin="10dp"
                    android:layout_marginLeft="10dp"
                    android:ellipsize="end" />


                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/fullBookDesc"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/categories"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="left|top" />

                    <TextView
                        android:id="@+id/authors"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right|top"
                        android:textStyle="bold" />
                </LinearLayout>


            </RelativeLayout>

        </ScrollView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:orientation="horizontal">

            <Button
                android:id="@+id/delete_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="10dp"
                android:drawableLeft="@drawable/ic_action_discard"
                android:text="@string/delete" />
        </LinearLayout>

    </LinearLayout>


    <RelativeLayout
        android:id="@+id/no_books_available"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:visibility="gone">

        <ImageView
            android:id="@+id/no_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_no_book" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/no_image"
            android:gravity="center"
            android:text="@string/no_book_added"
            android:textColor="@color/black"
            android:textSize="@dimen/medium_fontsize" />

    </RelativeLayout>
</FrameLayout>
